# projeto_duckdb

./: README.md  app.py  pyproject.toml
